added new form in main header

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <li><a href="index.html" class="style-nav purple">Home</a></li>
             <li><a href="mission.html" class="style-nav orange">Our Mission</a></li>
             <li><a href="photo.html" class="style-nav green ">Photo Gallery</a></li>
-            <li><a href="contact.html" class="style-nav p">Contact us</a></li>
+            <li><a href="contact.html" class="style-nav purple">Contact us</a></li>
         </ul>
 
         <div class="burger">
@@ -63,9 +63,20 @@
                 to provide the best <br />
                 for your child
             </h1>
-            <div class="button-area flex">
-                <input type="submit"  value="Learn More > " class="header-button" />
+        </div>
+        <div class="reachout-box">
+            <h1> We'd love to hear from you! </h1>
+            <div class="reachout-form">
+                <form action="" class="reachout-flex" class="reachout-field">
+                    <input type="text" placeholder="name" class="reachout-field">
+                    <input type="email" placeholder="email" class="reachout-field">
+                    <textarea name="Leave us a message!" id="" cols="30" rows="10" class="reachout-text"></textarea>
+                    <input type="submit" name="submit" class="reachout-button">
+                </form>
             </div>
+        </div>
+        <div class="button-area flex">
+            <input type="submit"  value="Learn More > " class="header-button" />
         </div>
     </div>
     <!-- End of header text -->
