--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <div class="reachout-box">
             <h1> We'd love to hear from you! </h1>
             <div class="reachout-form">
-                <form action="" class="reachout-flex" class="reachout-field">
+                <form action="" class="reachout-flex">
                     <input type="text" placeholder="name" class="reachout-field">
                     <input type="email" placeholder="email" class="reachout-field">
                     <textarea name="Leave us a message!" id="" cols="30" rows="10" class="reachout-text"></textarea>
