fixed blank space

--- a/index.html
+++ b/index.html
@@ -79,23 +79,18 @@
             <button type="submit" class="header-button" > Learn More </button> 
         </div>
     </div>
+    <!-- End of header text -->
     <!-- get started -->
-    <div class="Body-container"></div> 
-        <div class="getstarted-grid">
+    <div class="getstarted-container">
+       <div class="getstarted-grid">
             <div class="step1">
-                <div class="step-pic"></div>
-                <p class="step-info"></p>
             </div>
             <div class="step2">
-                <div class="step-pic"></div>
-                <p class="step-info"></p>
             </div>
-            <div class="step3">
-                <div class="step-pic"></div>
-                <p class="step-info"></p>
+            <div class="step3"> 
             </div>
         </div>
-    <!-- End of header text -->
+    </div>
     <!-- Bottom Navbar -->
     <footer>
         <div class="footer">
