Added new steps cards

--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
     </nav>
     <!-- End of Navbar -->
     <!-- Header Text -->
+    <div class="clip-path">
     <div class="header">
         <div class="header-text">
             <h1 class="heading">
@@ -79,16 +80,24 @@
             <button type="submit" class="header-button" > Learn More </button> 
         </div>
     </div>
+</div>
     <!-- End of header text -->
     <!-- get started -->
     <div class="getstarted-container">
        <div class="getstarted-grid">
-            <div class="step1">
-            </div>
-            <div class="step2">
-            </div>
-            <div class="step3"> 
-            </div>
+           <div class="step1-text text-align">
+               <h2 class="topfill1">Express your interest! </h2>
+               <p> Fill out our form of interest, <br/> and we will reach out immediately with next steps. <br/> We can't wait to here from you! </p>
+           </div>
+           <div class="step2-text text-align">
+                <h2 class="topfill2"> Family Time! </h2>
+                <p> We'll reach out to get to know you and your family better. We care about your needs, and want to learn more! we'll have a quick call and go over next steps. </p>
+           </div>
+           <div class="step3-text text-align">
+                <h2 class="topfill3"> Be Worry Free! </h2>
+                <p> Done! you'll be worry free, knowing your children will be in good hands! we'll go over orientation and make sure everything is ready to go, easy as 1 2 3! </p>
+           </div>
+           
         </div>
     </div>
     <!-- Bottom Navbar -->
