Changed text desc

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     <div class="getstarted-container">
        <div class="getstarted-grid">
            <div class="step1-text text-align">
-               <h2 class="topfill1">Express your interest! </h2>
+               <h2 class="topfill1"> <a href="" target="_blank"> Express your interest! </a></h2>
                <p> Fill out our form of interest, <br/> and we will reach out immediately with next steps. <br/> We can't wait to here from you! </p>
            </div>
            <div class="step2-text text-align">
