added styling to main header

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" />
 
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300&display=swap" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Hachi+Maru+Pop&family=Itim&family=Schoolbell&display=swap" rel="stylesheet">
+
     <link href="font-awesome/css/font-awesome.css" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
 
@@ -62,10 +65,10 @@
     <div class="header">
         <div class="header-text">
             <h1 class="heading">
-                We do our<span class="most">most</span>
-                to provide the <span class="best">best</span> 
+                We do our<span class="purple">most</span>
+                to provide the <span class="orange">best</span> 
                 for your child
-                <p class="header-p"> 10 years of love for what we do <br>From all ages, we dedicate ourselves <br> to education and fostering growth.</p>
+                <p class="header-p"> 10 years of <span class="purple"> love</span> for what we do <br>From all ages, we dedicate ourselves to <span class="orange"> education </span> and fostering <span class="green"> growth in your family </span></p>
                 <div class="header-button-flex">
                     <button type="submit" class="header-button" > Learn More </button> 
                 </div> 
