--- a/photo.html
+++ b/photo.html
@@ -13,7 +13,12 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" />
 
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300&display=swap" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Hachi+Maru+Pop&family=Itim&family=Schoolbell&display=swap" rel="stylesheet">
+
     <link href="font-awesome/css/font-awesome.css" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="style.css" />
 </head>
