change aesthetics, colors, and styled interest form. Added new heading.

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300&display=swap" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Hachi+Maru+Pop&family=Itim&family=Schoolbell&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Shippori+Mincho&display=swap" rel="stylesheet">
 
     <link href="font-awesome/css/font-awesome.css" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -64,15 +66,13 @@
     <div class="clip-path">
     <div class="header">
         <div class="header-text">
-            <h1 class="heading">
-                We do our<span class="purple">most</span>
-                to provide the <span class="orange">best</span> 
-                for your child
-                <p class="header-p"> 10 years of <span class="purple"> love</span> for what we do <br>From all ages, we dedicate ourselves to <span class="orange"> education </span> and fostering <span class="green"> growth in your family </span></p>
+            <div class="heading">
                 <div class="header-button-flex">
+                <img src="/imgs/2.png" alt="">
+                <p class="header-p"> 10 years of <span class="purple"> love</span> for what we do <br>From all ages, we dedicate <br> ourselves to <span class="orange"> education </span>  <br> and fostering <span class="green"> growth in your family </span></p>
                     <button type="submit" class="header-button" > Learn More </button> 
                 </div> 
-            </h1>
+            </div>
             
         </div>
         <div class="reachout-box">
@@ -93,45 +93,45 @@
     <!-- get started -->
     <div class="getstarted-container">
        <div class="getstarted-grid">
-           <div class="step1-text text-align">
+           <div class="step-text text-align">
                <h2 class="topfill1"> <a href="" target="_blank"> Express your interest! </a></h2>
                <p> Fill out our form of interest, <br/> and we will reach out immediately with next steps. <br/> We can't wait to here from you! </p>
            </div>
-           <div class="step2-text text-align">
+           <div class="step-text text-align">
                 <h2 class="topfill2"> Family Time! </h2>
                 <p> We'll reach out to get to know you and your family better. We care about your needs, and want to learn more! we'll have a quick call and go over next steps. </p>
            </div>
-           <div class="step3-text text-align">
+           <div class="step-text text-align">
                 <h2 class="topfill3"> Be Worry Free! </h2>
                 <p> Done! you'll be worry free, knowing your children will be in good hands! we'll go over orientation and make sure everything is ready to go, easy as 1 2 3! </p>
            </div>
         </div>
     </div>
     <div class="interest-container-grid">
-    <h1 class="interest-header"> Start you first steps with us!</h1>
-    <div class="interest">
-        <form action="" class="interest-form">
-           <label for=""> First Name </label> 
-           <input type="text" placeholder="First Name">
-           <label for=""> Last Name </label> 
-           <input type="text" placeholder="Last Name">
-           <label for=""> Email </label> 
-           <input type="text" placeholder="Email">
-           <label for=""> Phone Number </label> 
-           <input type="text" placeholder="Phone Number">
-           <label for="tentacles">Number of Children:</label>
-           <input type="number" id="Children" name="Children"
-            min="1" max="10">
-           <label for="start">Start date:</label>
-           <input type="date" id="start" name="child-start"
-            value="2021-02-25"
-            min="2021-02-25" max="2030-12-31">
-            <label for="extra"> Let us know any extra details!</label>
-            <textarea name="" id="" cols="30" rows="10"></textarea>
-            <button type="submit"> Submit</button>
-         </form>
-    </div>
-    <img src="/imgs/Teal and Orange Boxes Art & Design Logo.png" alt="Daycare Logo" class="daycare-logo">
+        <h1 class="interest-header"> Start you first steps with us!</h1>
+        <div class="interest">
+            <h1> Express your interest!</h1>
+            <form action="" class="interest-form">
+                    <label for=""> First Name </label> 
+                    <input type="text" placeholder="First Name">
+                    <label for=""> Last Name </label> 
+                    <input type="text" placeholder="Last Name">
+                    <label for=""> Email </label> 
+                    <input type="text" placeholder="Email">
+                    <label for=""> Phone Number </label> 
+                    <input type="text" placeholder="Phone Number">
+                    <label for="number">Number of Children:</label>
+                    <input type="number" id="number" name="number" min="1" max="10" placeholder="Number of children"/>
+                    <label for="start">Start date:</label>
+                    <input type="date" id="start" name="child-start"
+                    value="2021-02-25"
+                    min="2021-02-25" max="2030-12-31">
+                    <label for="extra"> Let us know any extra details!</label>
+                    <textarea name="" id="" cols="30" rows="10"></textarea>
+                    <button type="submit">Submit</button>
+            </form>
+        </div>
+                    <img src="/imgs/daycarelogo.png" alt="Daycare Logo" class="daycare-logo">
     </div>
     <!-- Bottom Navbar -->
     <footer>
